# EchoNotifier

./: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  notifications.rs
